# workflow-srv

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  docker-bake.hcl  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-test.yaml  ci.yaml  conventional_commits.yml  dependency.yml  docker-build.yaml  lint.yaml  lint.yml  release-image.yaml  reusable-docker-build-push.yaml  stale.yml
assets/: workflowserver.Dockerfile
docs/: CONTRIBUTING.md  README.md  _sidebar.md  index.html
manifest-spec/: openapi.yaml
src/agent_workflow_server/: main.py
src/agent_workflow_server/agents/: base.py  load.py  oas_generator.py
src/agent_workflow_server/apis/: agents.py  authentication.py  depends.py  runs.py  stateless_runs.py  threads.py  threads_runs.py
src/agent_workflow_server/auth/: auth.py
src/agent_workflow_server/logger/: custom_logger.py
src/agent_workflow_server/logging/: logger.py
templates/: model_anyof.mustache  model_oneof.mustache
tests/: .env.test  conftest.py  mock.py  mock_manifest.json  test_auth.py  test_generator.py  test_langgraph_adapter.py  test_llamaindex_adapter.py  test_load.py  test_openapi.json  test_runs.py  test_threads.py  test_validation.py  tools.py
tests/agents/: jokeflow.py  jokeflow_manifest.json  jokereviewer.py  jokereviewer_manifest.json  mailcomposer.json  mailcomposer.py
(+16 files in other folders)
